crates/swc_ecma_parser/tests/flow/type_guards/invalid/implies_missing_is_type.js
type T = (x: mixed) => implies x;
